--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.4.13",
+    "nodemailer-express-handlebars": "^4.0.0"
   }
 }
